Commit for sprint 4
Demands and switching demand EIU-21
Prioritization EIU-24
ECT calculation EIU-75
Pump control GP1 EIU-54

--- a/SWNOVHIDUOUCR00/SWNOVHIDUOUCR00/Lang/EN.lang
+++ b/SWNOVHIDUOUCR00/SWNOVHIDUOUCR00/Lang/EN.lang
@@ -1193,6 +1193,7 @@
         <Item Key="HEATING" Value="Unit in heating mode" />
         <Item Key="COOLING" Value="Unit in cooling mode" />
         <Item Key="DHW" Value="Unit in DHW mode" />
+        <Item Key="DEFROST" Value="Unit in Fefrost mode" />
       </Items>
     </Section>
     <Section Name="OutSideTemp" Category="Enums" EmbedTranslation="false">
